Refactoring code scoped css Corrected favicon removed unused files

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="https://uploads-ssl.webflow.com/5f127ac8860f158e650f06b5/5f17963a00716c7fc6f4e408_5f175601a108290ebc08765b_32px.png">
     <title>Remote Roofing</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDStJDCxbSou1h5GSLr2kBPFvUKlOEbesA&libraries=places"></script>
 </head>
